templates/talend_network.template.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Parameters": {
        "SSHLocation": {
            "Description": "The IP address range that can be used to access the TAC server using SSH.",
            "Type": "String",
            "MinLength": "9",
            "MaxLength": "18",
            "Default": "71.120.28.163/32",
            "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
            "ConstraintDescription": "must be a valid IP CIDR range of the form x.x.x.x/x."
        },
		"TalendVpcCIDR": {
            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
            "Default": "10.0.0.0/16",
            "Description": "CIDR block for the VPC",
            "Type": "String"
        },
		"TalendPublicSubnetCIDR": {
			"Type": "String",
            "Default": "10.0.128.0/20",
            "Description": "CIDR block for the public subnet",
            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28"
		},
		"TalendPrivateSubnetCIDR": {
			"Type": "String",
            "Default": "10.0.0.0/19",
            "Description": "CIDR block for the private subnet",
            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28"
		}
    },
    "Mappings": {
	},
    "Resources": {
        "TalendVPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "EnableDnsSupport": "true",
                "EnableDnsHostnames": "true",
                "CidrBlock": { "Ref": "TalendVpcCIDR" }
            }
        },
        "TACSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "VpcId": {
                    "Ref": "TalendVPC"
                },
                "GroupDescription": "Allow access from HTTP and SSH traffic",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": {
                            "Ref": "SSHLocation"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "8080",
                        "ToPort": "8080",
                        "CidrIp": {
                            "Ref": "SSHLocation"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "8081",
                        "ToPort": "8081",
                        "CidrIp": {
                            "Ref": "SSHLocation"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "9200",
                        "ToPort": "9200",
                        "CidrIp": {
                            "Ref": "SSHLocation"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "5601",
                        "ToPort": "5601",
                        "CidrIp": {
                            "Ref": "SSHLocation"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "8085",
                        "ToPort": "8085",
                        "CidrIp": {
                            "Ref": "SSHLocation"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": {
                            "Ref": "SSHLocation"
                        }
                    }
                ]
            }
        },
        "TACSecurityGroupIngress": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "DependsOn": "TACSecurityGroup",
            "Properties": {
                "GroupId": {
                    "Ref": "TACSecurityGroup"
                },
                "IpProtocol": "tcp",
                "FromPort": "0",
                "ToPort": "65535",
                "SourceSecurityGroupId": {
                    "Ref": "TACSecurityGroup"
                }
            }
        },
        "TACSecurityGroupJobServerIngress": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "DependsOn": "TACSecurityGroup",
            "Properties": {
                "GroupId": {
                    "Ref": "TACSecurityGroup"
                },
                "IpProtocol": "tcp",
                "FromPort": "0",
                "ToPort": "65535",
                "SourceSecurityGroupId": {
                    "Ref": "JobServerSecurityGroup"
                }
            }
        },
        "TACSecurityGroupIngressICMP": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "DependsOn": "TACSecurityGroup",
            "Properties": {
                "GroupId": {
                    "Ref": "TACSecurityGroup"
                },
                "IpProtocol": "icmp",
                "FromPort": "-1",
                "ToPort": "-1",
                "SourceSecurityGroupId": {
                    "Ref": "TACSecurityGroup"
                }
            }
        },
        "JobServerSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "VpcId": {
                    "Ref": "TalendVPC"
                },
                "GroupDescription": "Job Server Security Group needs to include TAC and Nexus",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": {
                            "Ref": "SSHLocation"
                        }
                    }
                ]
            }
        },
        "JobServerSecurityGroupIngress": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "DependsOn": "JobServerSecurityGroup",
            "Properties": {
                "GroupId": {
                    "Ref": "JobServerSecurityGroup"
                },
                "IpProtocol": "tcp",
                "FromPort": "0",
                "ToPort": "65535",
                "SourceSecurityGroupId": {
                    "Ref": "JobServerSecurityGroup"
                }
            }
        },
        "JobServerSecurityGroupTacIngress": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "DependsOn": "JobServerSecurityGroup",
            "Properties": {
                "GroupId": {
                    "Ref": "JobServerSecurityGroup"
                },
                "IpProtocol": "tcp",
                "FromPort": "0",
                "ToPort": "65535",
                "SourceSecurityGroupId": {
                    "Ref": "TACSecurityGroup"
                }
            }
        },
        "JobServerSecurityGroupIngressICMP": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "DependsOn": "JobServerSecurityGroup",
            "Properties": {
                "GroupId": {
                    "Ref": "JobServerSecurityGroup"
                },
                "IpProtocol": "icmp",
                "FromPort": "-1",
                "ToPort": "-1",
                "SourceSecurityGroupId": {
                    "Ref": "JobServerSecurityGroup"
                }
            }
        },
        "TalendInternetGateway": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {}
        },
        "VPCGatewayAttachment": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "InternetGatewayId": {
                    "Ref": "TalendInternetGateway"
                },
                "VpcId": {
                    "Ref": "TalendVPC"
                }
            }
        },
        "TalendPublicSubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": { "Ref": "TalendVPC" },
                "MapPublicIpOnLaunch": true,
                "CidrBlock": { "Ref": "TalendPublicSubnetCIDR" }
            }
        },
        "PublicRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": { "Ref": "TalendVPC" }
            }
        },
        "PublicRoute": {
            "Type": "AWS::EC2::Route",
            "DependsOn": [
                "TalendInternetGateway"
            ],
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                },
                "GatewayId": {
                    "Ref": "TalendInternetGateway"
                }
            }
        },
        "PublicSubnetRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": { "Ref": "PublicRouteTable" },
                "SubnetId": { "Ref": "TalendPublicSubnet" }
            }
        },
        "TalendNatGateway": {
            "Type": "AWS::EC2::NatGateway",
            "DependsOn": [ "VPCGatewayAttachment" ],
            "Properties": {
				"SubnetId": { "Ref": "TalendPublicSubnet"},
				"AllocationId": "eipalloc-31194455"
			}
        },
        "TalendPrivateSubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": { "Ref": "TalendVPC" },
                "CidrBlock": { "Ref": "TalendPrivateSubnetCIDR" }
            }
        },
        "PrivateRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "TalendVPC"
                }
            }
        },
        "PrivateRoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PrivateRouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "TalendNatGateway"
                }
            }
        },
        "PrivateSubnetRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PrivateRouteTable"
                },
                "SubnetId": {
                    "Ref": "TalendPrivateSubnet"
                }
            }
        },
        "PrivateSubnetNetworkAcl": {
            "Type": "AWS::EC2::NetworkAcl",
            "Properties": {
                "VpcId": {
                    "Ref": "TalendVPC"
                }
            }
        },
        "PrivateSubnetNetworkAclEntryInbound": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "CidrBlock": "0.0.0.0/0",
                "Egress": "false",
                "NetworkAclId": {
                    "Ref": "PrivateSubnetNetworkAcl"
                },
                "Protocol": "-1",
                "RuleAction": "allow",
                "RuleNumber": "100"
            }
        },
        "PrivateSubnetNetworkAclEntryOutbound": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "CidrBlock": "0.0.0.0/0",
                "Egress": "true",
                "NetworkAclId": {
                    "Ref": "PrivateSubnetNetworkAcl"
                },
                "Protocol": "-1",
                "RuleAction": "allow",
                "RuleNumber": "100"
            }
        },
        "PrivateSubnetNetworkAclAssociation": {
            "Type": "AWS::EC2::SubnetNetworkAclAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "TalendPrivateSubnet"
                },
                "NetworkAclId": {
                    "Ref": "PrivateSubnetNetworkAcl"
                }
            }
        }
    },
    "Outputs": {
        "talendVpc": {
            "Value": {
                "Ref": "TalendVPC"
            },
            "Description": "VPC for Talend deployment",
            "Export": {
                "Name": {
                    "Fn::Join": [
                        "",
                        [
                            {
                                "Ref": "AWS::StackName"
                            },
                            ":",
                            "vpc",
                            ":",
                            "talendVpc"
                        ]
                    ]
                }
            }
        },
        "publicSubnet": {
            "Value": {
                "Ref": "TalendPublicSubnet"
            },
            "Description": "Subnet on  which the TAC resides",
            "Export": {
                "Name": {
                    "Fn::Join": [
                        "",
                        [
                            {
                                "Ref": "AWS::StackName"
                            },
                            ":",
                            "network",
                            ":",
                            "publicSubnet"
                        ]
                    ]
                }
            }
        },
        "tacSecurityGroup": {
            "Value": {
                "Ref": "TACSecurityGroup"
            },
            "Description": "Security Group for TAC server",
            "Export": {
                "Name": {
                    "Fn::Join": [
                        "",
                        [
                            {
                                "Ref": "AWS::StackName"
                            },
                            ":",
                            "network",
                            ":",
                            "tacSecurityGroup"
                        ]
                    ]
                }
            }
        },
        "privateSubnet": {
            "Value": {
                "Ref": "TalendPrivateSubnet"
            },
            "Description": "Subnet on  which the Jobservers reside",
            "Export": {
                "Name": {
                    "Fn::Join": [
                        "",
                        [
                            {
                                "Ref": "AWS::StackName"
                            },
                            ":",
                            "network",
                            ":",
                            "privateSubnet"
                        ]
                    ]
                }
            }
        },
        "jobserverSecurityGroup": {
            "Value": {
                "Ref": "JobServerSecurityGroup"
            },
            "Description": "Security Group for Job Servers",
            "Export": {
                "Name": {
                    "Fn::Join": [
                        "",
                        [
                            {
                                "Ref": "AWS::StackName"
                            },
                            ":",
                            "network",
                            ":",
                            "jobserverSecurityGroup"
                        ]
                    ]
                }
            }
        }
    }
}
